--- a/static/home/home_style.css
+++ b/static/home/home_style.css
@@ -4,14 +4,90 @@ body {
   padding: 20px;
 }
 
+.title {
+  width: 100%;
+  height: 80px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+h1 {
+  color: white;
+  width: 100%;
+  text-align: center;
+  font-weight: 300;
+}
+
+a {
+  color: white;
+  width: 100%;
+  text-align: center;
+}
+
 label {
   color: white;
-  font-size:2em;
+  font-size:1.5em;
+  padding-top: 20px;
 }
 
 input[type=text] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
+  margin-bottom: 30px;
   box-sizing: border-box;
+}
+
+.colour-selection {
+  display: block;
+}
+
+.colour-options {
+  width: 100%;
+  height: 40px;
+  color:black;
+  padding: 10px;
+  background-color: white;
+  margin-top:5px;
+}
+
+.option-active {
+
+  transition: 200ms margin-left;
+
+  width: 96%;
+  margin-left: 4%;
+}
+
+.red {
+  background-color: #ff7675;
+  border-left: 4px solid #d63031;
+}
+
+.blue {
+  background-color: #74b9ff;
+  border-left: 4px solid #0984e3;
+}
+
+.green {
+  background-color: #55efc4;
+  border-left: 4px solid #00b894;
+}
+
+.yellow {
+  background-color: #ffeaa7;
+  border-left: 4px solid #fdcb6e;
+}
+
+.ready {
+
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  margin-top: 20px;
+  text-align: center;
+  background-color: white;
+  border-radius: 10px;
+  color: black;
+
 }
