--- a/static/admin/admin_style.css
+++ b/static/admin/admin_style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .admin-details {
-  background: #48dbfb;
+  /* background: #48dbfb; */
   position: absolute;
   width:100%;
   height:10%;
