--- a/static/home/home_style.css
+++ b/static/home/home_style.css
@@ -64,6 +64,11 @@ input[type=text] {
   border-left: 4px solid #d63031;
 }
 
+.orange {
+  background-color: #fab1a0;
+  border-left: 4px solid #e17055;
+}
+
 .blue {
   background-color: #74b9ff;
   border-left: 4px solid #0984e3;
@@ -78,6 +83,12 @@ input[type=text] {
   background-color: #ffeaa7;
   border-left: 4px solid #fdcb6e;
 }
+
+.pink {
+  background-color: #fd79a8;
+  border-left: 4px solid #e84393;
+}
+
 
 .ready {
 
